Fix body overflow

--- a/_assets/sass/_layout.sass
+++ b/_assets/sass/_layout.sass
@@ -1,5 +1,6 @@
 body
   background: $color-white
+  overflow-x: hidden
   padding: 6em 1.5em 0
 
   @media (min-width: 42em)
